src/css/Sidebar.scss
.sidebar {
  width: 150px;
  margin-left: 5px;
  z-index: 2;
}
h2 {
  font-size: 11px;
  color: #646464;
  font-weight: normal;
  margin-top: 0px;
  text-shadow: 1px 1px 1px #2d2d2d;
}
.sidebar a,
.sidebar span {
  display: block;
  color: white;
  background: rgb(35, 40, 42);
  border-radius: 4px;
  margin: 6px 0;
  padding: 10px;
  font-size: 0.875rem;
  line-height: 8px;
  text-decoration: none;
  text-align: center;
  cursor: pointer;
  font-family: sans-serif;
  -webkit-font-smoothing: antialiased;
  transition: 0.3s ease all;
}

.sidebar .active {
  background-image: linear-gradient(270deg, #fed29d, #a58b66, #7abae8, #56a0d6);
  background-size: 720%;
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.5);
  transition: 0s ease all;
}
.sidebar a:hover,
.sidebar span:hover {
  background: rgb(132, 112, 89);
}
.sidebar .active a:hover,
.sidebar .span span:hover {
  background: rgb(254, 209, 158);
}

.sidebar .active:hover {
  background: rgb(224, 179, 128);
}

.sidebar .fixedContainer {
  position: fixed;
  width: 150px;
  -webkit-transform: translate3d(0, 0, 0);
  transition: 0.4s ease-in-out;
  h2 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .sidebar {
    .fixedContainer {
      transform: none !important;
      h2 {
        display: block;
      }
    }
  }
}

